--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div id="map-container">
             <!-- 🔥 ВАЖЛИВО: Файл картинки має називатися map.jpg і лежати поруч -->
             <!-- Або встав сюди пряме посилання на картинку в інтернеті -->
-            <img id="world-map" src="map.jpg" alt="World Map">
+            <img id="world-map" src="https://i.im.ge/2025/11/26/4hXkPS.Far-Lands.png" alt="World Map">
             
             <!-- Сюди скрипт буде додавати маркери -->
             <div id="markers-layer"></div>
