--- a/menu.html
+++ b/menu.html
@@ -277,16 +277,12 @@
             // Тут потрібно додати логіку перевірки наявності збереження (AJAX)
             tg.sendData("continue");
         }
-        
-        // Нова функція для відкриття меню створення героя
-        function openCharCreation() {
-            if (charCreationUrl) {
-                // Відкриває Web App створення героя за URL, переданим з Python
-                tg.openWebApp(charCreationUrl);
-            } else {
-                // Якщо URL не передано (наприклад, при прямому запуску Web App),
-                // відправляємо команду боту, щоб він відкрив це меню.
-                tg.sendData("OPEN_CHAR_CREATION_REQUEST");
+
+        // 🔥 ПЕРЕХІД НА СТОРІНКУ СТВОРЕННЯ ГЕРОЯ
+        function goToCreation() {
+            // Перенаправлення браузера (працює всередині Телеграму)
+            window.location.href = "char_creation.html";
+        }
             }
         }
 
