Add new locations to the map

--- a/map.html
+++ b/map.html
@@ -148,6 +148,29 @@
             6: { top: 32.00, left: 60.03, name: "Heathergan" }, 
             7: { top: 55.35, left: 56.83, name: "Winterfall" },
             8: { top: 70.77, left: 79.28, name: "Liddingal" },
+            9: { top: 75.27, left: 56.20, name: "Hillinguard's bridge" },
+            10: { top: 17.01, left: 77.10, name: "Highsky mountain" },
+            11: { top: 13.20, left: 56.20, name: "Coldwind mountain" },
+            12: { top: 46.41, left: 37.70, name: "Waterrise Sea" },
+            13: { top: 53.67, left: 27.80, name: "Woodrise mountain" },
+            14: { top: 71.09, left: 36.30, name: "Brightwood forest" },
+            15: { top: 76.17, left: 44.90, name: "Hillinguard's underhills" },
+            16: { top: 25.54, left: 32.20, name: "Stormfallen's hills" },
+            17: { top: 51.85, left: 20.60, name: "Lonelygan Mountain" },
+            18: { top: 46.95, left: 65.40, name: "Deepwater Sea" },
+            19: { top: 24.27, left: 62.00, name: "Tightway waters" },
+            20: { top: 16.47, left: 62.60, name: "Windfoldigan's bridge" },
+            21: { top: 77.63, left: 79.60, name: "Frozencold Island" },
+            22: { top: 63.65, left: 51.00, name: "Sandyland Island" },
+            23: { top: 23.91, left: 56.60, name: "Northwind Island" },
+            24: { top: 26.08, left: 50.00, name: "Singlehill Mountain" },
+            25: { top: 72.54, left: 24.60, name: "Ashe's Forest" },
+            26: { top: 70.55, left: 61.40, name: "Windyleafgan Forest" },
+            27: { top: 22.09, left: 66.30, name: "Winterfold Forest" },
+            28: { top: 51.31, left: 52.00, name: "Heathergan's bridge" },
+            29: { top: 44.23, left: 23.40, name: "Waterfallengal Sea" },
+            30: { top: 8.84, left: 84.70, name: "Wintercoldenfold Forest" },
+            31: { top: 13.02, left: 37.10, name: "Northleaf Island" },
             
         };
 
